--- a/my-app/src/styles/global.scss
+++ b/my-app/src/styles/global.scss
@@ -118,9 +118,11 @@ a {
 .nav__en {
   color: #065f8e;
   display: block;
+  font-size: 16px;
   font-weight: bold;
   position: relative;
   padding: 0 15px;
+  
   /* TODO */
 }
 
